plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'net.causw'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        maven {
            url = uri('https://jitpack.io')
        }
    }
}

// 공통 의존성 버전 관리
subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 25
    }

    dependencies {
        // Lombok
        compileOnly 'org.projectlombok:lombok:1.18.46'
        annotationProcessor 'org.projectlombok:lombok:1.18.46'
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
}
